adds basic css and add name in h1 to index

--- a/index.html
+++ b/index.html
@@ -1,1 +1,15 @@
-placeholder
+<!DOCTYPE html>
+<html>
+<head>
+  <meta name="viewport" content="width=device-width",>
+  <title></title>
+  <link rel="stylesheet" type="text/css" href="index.css">
+</head>
+<body>
+  <div class="index wrapper">
+    <div class="header">
+      <h1>Dylan Ling</h1>
+    </div>
+  </div>
+</body>
+</html>
