--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta name="viewport" content="width=device-width",>
-  <title></title>
+  <title>Dylan</title>
   <link rel="stylesheet" type="text/css" href="index.css">
 </head>
 <body>
