--- a/index.html
+++ b/index.html
@@ -10,6 +10,16 @@
     <div class="header">
       <h1>Dylan Ling</h1>
     </div>
+    <div>
+      <div class="rectangle">
+        <a href="https://www.dropbox.com/s/joksg2flazf4rbr/resume_dylan_ling.pdf?dl=0">résumé</a>
+      </div>
+    </div>
+    <div>
+      <div class="rectangle">
+        <a href="https://www.github.com/dylanling">github</a>
+      </div>
+    </div>
   </div>
 </body>
 </html>
